<resources>
    <string name="app_name">Batman Messenger</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="birth_date">Birth Date</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="forgot_password">Forgot password</string>
    <string name="username_error">Invalid email</string>
    <string name="password_error">
        Invalid password,please try again.
        Password should be like 6 to 20 characters string with at least one digit, one upper case letter, one lower case letter and one special symbol (“@#$%_”).
    </string>
    <string name="passwords_not_match">Passwords don\'t matches</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_surname">Invalid surname</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="invalid_bornDate">Invalid born date</string>
    <string name="title_activity_temp">TempActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="messege">Message</string>
    <string name="chats_not_found">Chats not found</string>
    <string name="invite_friends">Invite friends</string>
    <string name="friends">Friends</string>
    <string name="find_friends">Find friends</string>
    <string name="log_out">Log out</string>
    <string name="friends_not_found">Friends not found</string>
    <string name="search_title">Search</string>
    <string-array name="search_variants">
        <item>by email</item>
        <item>by surname</item>
        <item>by name</item>
        <item>by phone</item>
    </string-array>

</resources>
