<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/friends"
            android:icon="@drawable/ic_friends_teal_50_36dp"
            android:title="@string/friends" />
        <item
            android:id="@+id/invite_friends"
            android:icon="@drawable/ic_invite_friends_black_36dp"
            android:title="@string/invite_friends" />
        <item
            android:id="@+id/find_friends"
            android:icon="@drawable/ic_search_black_36dp"
            android:title="@string/find_friends" />
    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_36dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_log_out_black_36dp"
            android:title="@string/log_out" />
    </group>

</menu>
