<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorTeal500"
    android:gravity="center"
    android:clickable="true"
    android:focusableInTouchMode="true"
    style="@style/CustomTheme"
    tools:context=".presentation.register.RegisterActivity">


    <ImageButton
        android:id="@+id/backToLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:src="@drawable/ic_arrow_back_teal_50_24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorTeal800"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/colorTeal50"
            android:textColor="@color/colorTeal50"
            android:textColorHint="@color/colorTeal50"/>

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="16dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:ems="10"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorTeal50"
            android:textColor="@color/colorTeal50"
            android:textColorHint="@color/colorTeal50"/>

        <EditText
            android:id="@+id/editConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:padding="16dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:ems="10"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorTeal50"
            android:textColor="@color/colorTeal50"
            android:textColorHint="@color/colorTeal50"/>

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:padding="16dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:ems="10"
            android:inputType="text"
            android:backgroundTint="@color/colorTeal50"
            android:textColor="@color/colorTeal50"
            android:textColorHint="@color/colorTeal50"/>

        <EditText
            android:id="@+id/editSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            android:padding="16dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:ems="10"
            android:inputType="text"
            android:backgroundTint="@color/colorTeal50"
            android:textColor="@color/colorTeal50"
            android:textColorHint="@color/colorTeal50"/>

        <EditText
            android:id="@+id/editPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:padding="16dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:ems="10"
            android:inputType="phone"
            android:backgroundTint="@color/colorTeal50"
            android:textColor="@color/colorTeal50"
            android:textColorHint="@color/colorTeal50"/>

        <EditText
            android:id="@+id/editBirthDate"
            android:drawableRight="@drawable/ic_date_range_teal_50_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birth_date"
            android:padding="16dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:ems="10"
            android:clickable="true"
            android:focusable="false"
            android:editable="false"
            android:backgroundTint="@color/colorTeal50"
            android:textColor="@color/colorTeal50"
            android:textColorHint="@color/colorTeal50"/>

        <info.hoang8f.android.segmented.SegmentedGroup
            xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
            android:id="@+id/genderBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:orientation="horizontal"
            segmentedgroup:sc_border_width="2dp"
            segmentedgroup:sc_corner_radius="10dp"
            segmentedgroup:theme="@style/CustomTheme"
            android:clickable="true"
            android:focusable="false"
            >

            <RadioButton
                android:id="@+id/genderMale"
                style="@style/RadioButton"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Male" />

            <RadioButton
                android:id="@+id/genderFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Female"
                style="@style/RadioButton" />
        </info.hoang8f.android.segmented.SegmentedGroup>

        <Button
            android:id="@+id/btnSignUpReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:padding="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:text="@string/sign_up"
            android:background="@color/colorTeal900"
            android:textColor="@color/colorTeal50"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:layout_centerInParent="true"/>


</RelativeLayout>
