<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/userToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:elevation="4dp"
        app:popupTheme="@style/CustomTheme"/>

    <View
        android:id="@+id/userImageView"
        android:background="@color/colorTeal400"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
         />

    <TextView
        android:id="@+id/tvUserFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTeal50"
        android:textSize="26sp"
        android:layout_alignBottom="@+id/userImageView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        tools:text="Name Surname" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabOpenChat"
        android:src="@drawable/ic_chat_teal_50_36dp"
        app:backgroundTint="@color/colorTeal700"
        app:fabSize="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvUserFullName"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="29dp"
        android:layout_marginTop="23dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/userImageView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iconEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:src="@drawable/ic_email_grey_400_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleEmail"
                android:textSize="14sp"
                android:textColor="@android:color/darker_gray"
                android:layout_marginTop="10dp"
                android:text="@string/prompt_email"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/iconEmail"
                android:layout_marginStart="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/valueEmail"
                android:textSize="18sp"
                tools:text="test8@gmail.com"
                android:layout_below="@+id/titleEmail"
                android:layout_alignStart="@+id/titleEmail" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iconPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:src="@drawable/ic_phone_grey_400_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titlePhone"
                android:textSize="14sp"
                android:textColor="@android:color/darker_gray"
                android:layout_marginTop="10dp"
                android:text="@string/phone_number"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/iconPhone"
                android:layout_marginStart="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/valuePhone"
                android:textSize="18sp"
                tools:text="+380789564587"
                android:layout_below="@+id/titlePhone"
                android:layout_alignStart="@+id/titlePhone" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iconDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:src="@drawable/ic_date_range_grey_400_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleDate"
                android:textSize="14sp"
                android:textColor="@android:color/darker_gray"
                android:layout_marginTop="10dp"
                android:text="@string/birth_date"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/iconDate"
                android:layout_marginStart="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/valueDate"
                android:textSize="18sp"
                tools:text="01.01.1234"
                android:layout_below="@+id/titleDate"
                android:layout_alignStart="@+id/titleDate" />

        </RelativeLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:layout_centerInParent="true"/>


</RelativeLayout>